--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ futures-lite = "^1.11.3"
 anyhow = "^1.0.40"
 tokio = { version = "~1.6.0", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "macros", "signal", "sync"] }
 flume = "~0.10.7"
+backoff = {version = "~0.3.0", features = ["tokio", "futures"] }
